--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,8 +1,16 @@
 {
     "name": "@raid-ledger/contract",
     "version": "0.0.1",
+    "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "require": "./dist/index.js"
+        }
+    },
     "scripts": {
         "build": "tsc",
         "lint": "echo 'lint passed'"
