--- a/packages/contract/tsconfig.json
+++ b/packages/contract/tsconfig.json
@@ -1,17 +1,21 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "declaration": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
-        "target": "es2021",
+        "target": "ES2021",
         "sourceMap": true,
         "outDir": "./dist",
         "baseUrl": "./",
         "incremental": true,
         "skipLibCheck": true,
         "strict": true
-    }
+    },
+    "include": [
+        "src/**/*"
+    ]
 }
