fix(docker): include api/scripts in git for Docker entrypoint
ROK-152: Fix GHCR Docker Build

- Update .gitignore to exclude root scripts but include api/scripts
- Add docker-entrypoint.sh for migrations and admin bootstrap
- Add bootstrap-admin.ts for first-run credential generation
- Add seed scripts for games and admin
- Add verification scripts for auth and db

Council Decision 001: Phase 1 - Ship Core Vision

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ _bmad-output/
 planning-artifacts/
 implementation-artifacts/
 scripts/
+!/api/scripts/
 implementation_plan.md
 walkthrough.md
 handover.zip
