feat(ROK-143): Event cards UI polish with status badges, relative time, and demo mode
- Add status badges (Upcoming/Live/Ended) with color coding
- Add relative time display (e.g., 'in 2 hours', 'tomorrow')
- Create EventsEmptyState component with calendar illustration
- Add DEMO_MODE env var for seeding sample data in Docker
- Create seed-events.ts script for demo data
- Update docker-entrypoint.sh to run seeds when DEMO_MODE=true
- 30 tests passing

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -63,6 +63,9 @@ COPY --from=builder /app/packages/contract/package.json ./node_modules/@raid-led
 COPY api/scripts/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
+# Copy seed scripts for demo mode
+COPY --from=builder /app/api/dist/scripts ./dist/scripts
+
 # Switch to non-root user
 USER nestjs
 
