feat(ROK-170): Calendar Page epic planning + Phase 2 setup
Council Decision #004:
- Calendar Page epic approved as Phase 2 lead
- Landing page pivot: tool-first UX (calendar as home)
- 6 new stories created (ROK-171 through ROK-176)
- ROK-157 moved from Phase 1.5 to end of Phase 2
- Phase 1.5 complete (ROK-161 verified)

Stories created:
- ROK-171: Calendar Month View
- ROK-172: Calendar Week View
- ROK-173: Calendar Mobile Responsive
- ROK-174: Calendar API (Date Range)
- ROK-175: Calendar as Default Route
- ROK-176: Remove Marketing Landing Page

Includes:
- ROK-161 implementation (Redis caching, retry logic, debounce)
- UX mockups for calendar views and login page
- Phase restructuring documentation

[Phase 1.5 complete, Phase 2 ready]

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ CLIENT_URL=http://localhost:5173
 CORS_ORIGIN=http://localhost:5173
 
 # Optional: IGDB API (for game discovery)
+# Pre-seeded with 48+ games - keys only needed for additional game search
+# Get credentials from Twitch Developer Console: https://dev.twitch.tv/console
 # IGDB_CLIENT_ID=your_twitch_client_id
 # IGDB_CLIENT_SECRET=your_twitch_client_secret
 
