feat(ROK-175/176): Tool-first UX - remove marketing page, redesign login
ROK-175: System Status API
- Add /system/status endpoint for first-run detection
- Add discordConfigured flag based on env vars
- Add isFirstRun flag based on user count
- Add useSystemStatus hook for frontend

ROK-176: Remove Marketing Landing Page
- Delete home-page.tsx marketing component
- Redesign login page with glassmorphism card
- Add conditional Discord button (hidden when unconfigured)
- Change Email field to Username field
- Add community name from VITE_COMMUNITY_NAME env var
- Add tagline below login card
- Remove Home link from navigation

Code Review Fixes:
- Fix API/UI field mismatch (username vs email)
- Extract DiscordIcon component to reduce duplication
- Add 7 unit tests for login page
- Update API to accept both username and email fields
- Fix npm workspaces path in Dockerfile

Tests: 52 frontend, 119 backend - all passing

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -49,11 +49,8 @@ COPY --from=builder /app/api/package.json ./package.json
 # Copy drizzle migrations (SQL files only)
 COPY --from=builder /app/api/src/drizzle/migrations ./drizzle/migrations
 
-# Copy production node_modules first (root-level hoisted packages)
+# Copy production node_modules (npm workspaces hoists all to root)
 COPY --from=builder /app/node_modules ./node_modules
-
-# Copy API workspace node_modules (includes @nestjs/core, platform-express, etc)
-COPY --from=builder /app/api/node_modules ./node_modules
 
 # Copy contract package AFTER node_modules to overlay the built version
 COPY --from=builder /app/packages/contract/dist ./node_modules/@raid-ledger/contract/dist
