feat: Calendar color fill, SVG placeholders, and visual fixes
Calendar & Event Card Visual Fixes:
- Fix calendar event colors to fill entire time slot (not just border)
- Add SVG placeholder images for games (wow, ffxiv, valheim, generic)
- Create shared game-colors.ts constants file
- Use SVG placeholders when cover art unavailable or fails to load
- Fix avatar URL logic to check discordId before Discord CDN
- Fix IGDB IDs in seed-events.ts to match games-seed.json
- Add gameRegistry join to events service for slug access
- Update events.service.spec.ts mocks for new join

Files added:
- web/src/constants/game-colors.ts
- web/public/placeholders/*.svg (4 placeholders)
- web/src/pages/calendar-page.tsx
- web/src/components/calendar/* (CalendarView, MiniCalendar, styles)

Tests: 119/119 API tests pass, web build clean

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -63,6 +63,9 @@ RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 # Copy seed scripts for demo mode
 COPY --from=builder /app/api/dist/scripts ./dist/scripts
 
+# Copy seed data files (games-seed.json for ROK-160)
+COPY --from=builder /app/api/seeds ./dist/seeds
+
 # Switch to non-root user
 USER nestjs
 
