feat: auth state fixes, admin settings, stories, and code review fixes
Auth & Login:
- Fixed useAuth.login() to be async with error handling (M1/L2)
- Fixed auth-success-page IIFE to catch errors (M2)
- Header now correctly shows user after local login

Admin Settings (ROK-176 continuation):
- Added dynamic Discord OAuth configuration via admin UI
- Hot-reload support for Discord strategy
- Database-backed settings with encryption for secrets
- New admin settings page at /admin/settings

Stories Created:
- ROK-186: Calendar Avatar Overflow Fix
- ROK-187: User Timezone Preferences
- ROK-188: Delete User Account
- ROK-189: Weekly Availability Heatmap Selector

Tech Debt Tracked:
- TD-012: system.controller.spec.ts test failures
- TD-013: login-page.test.tsx test failure

Other:
- Various schema updates (signups, roster)
- Calendar view styling improvements
- Profile page enhancements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,10 @@ services:
       timeout: 5s
       retries: 5
 
-  # API service with health check
+  # =============================================================================
+  # API service (NestJS)
+  # Profile: test - Full stack for UI testing with DEMO_MODE seeding
+  # =============================================================================
   api:
     build:
       context: .
@@ -46,9 +49,11 @@ services:
       DATABASE_URL: postgresql://user:password@db:5432/raid_ledger
       REDIS_URL: redis://redis:6379
       JWT_SECRET: dev-secret-change-in-prod
-      CORS_ORIGIN: http://localhost:5173
-      # Enable demo mode for seeding sample data (games + events)
-      DEMO_MODE: "true"
+      CLIENT_URL: http://localhost:80
+      CORS_ORIGIN: http://localhost:80
+      # DEMO_MODE seeds games, events, admin user, signups, and availability
+      # Override with: DEMO_MODE=false docker compose --profile test up -d
+      DEMO_MODE: "${DEMO_MODE:-true}"
     ports:
       - "3000:3000"
     healthcheck:
@@ -58,10 +63,12 @@ services:
       retries: 5
       start_period: 30s
     profiles:
-      - full
       - test
 
-  # Web service (Vite preview mode for testing)
+  # =============================================================================
+  # Web service (Nginx serving production build)
+  # Profile: test - Serves on port 80 for Playwright verification
+  # =============================================================================
   web:
     build:
       context: .
