--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -85,3 +85,31 @@ jobs:
           platforms: linux/amd64,linux/arm64
           build-args: |
             VITE_API_URL=/api
+
+  # Create GitHub Release on version tags
+  release:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          body: |
+            ## Docker Images
+            
+            ```bash
+            docker pull ghcr.io/${{ github.repository }}/api:${{ github.ref_name }}
+            docker pull ghcr.io/${{ github.repository }}/web:${{ github.ref_name }}
+            ```
+            
+            See [README](https://github.com/${{ github.repository }}#readme) for deployment instructions.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
