--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,11 +36,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata for API image
-        id: meta-api
+      - name: Extract metadata
+        id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/api
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -48,43 +48,17 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
 
-      - name: Extract metadata for Web image
-        id: meta-web
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix=
-
-      - name: Build and push API image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./api/Dockerfile
+          file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-api.outputs.tags }}
-          labels: ${{ steps.meta-api.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
-
-      - name: Build and push Web image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./web/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-web.outputs.tags }}
-          labels: ${{ steps.meta-web.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            VITE_API_URL=/api
 
   # Create GitHub Release on version tags
   release:
@@ -103,13 +77,17 @@ jobs:
         with:
           generate_release_notes: true
           body: |
-            ## Docker Images
+            ## Quick Deploy
             
             ```bash
-            docker pull ghcr.io/${{ github.repository }}/api:${{ github.ref_name }}
-            docker pull ghcr.io/${{ github.repository }}/web:${{ github.ref_name }}
+            docker run -d \
+              -p 80:80 \
+              -e DATABASE_URL=postgresql://user:pass@host:5432/db \
+              -e REDIS_URL=redis://host:6379 \
+              -e JWT_SECRET=your-secret \
+              ghcr.io/${{ github.repository }}:${{ github.ref_name }}
             ```
             
-            See [README](https://github.com/${{ github.repository }}#readme) for deployment instructions.
+            See [README](https://github.com/${{ github.repository }}#readme) for full setup.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
