feat(ROK-306): integrate Sentry for error tracking & replace GitHub feedback pipeline
- Add @sentry/nestjs backend SDK with hardcoded DSN, ThrottlerException filtering,
  deployment tagging via os.hostname(), and DISABLE_TELEMETRY opt-out
- Add @sentry/react frontend SDK with hardcoded DSN (separate Sentry project),
  React 19 error hooks, ErrorBoundary, and deployment tagging via hostname
- Add @sentry/vite-plugin for automatic source map uploads in production builds
- Replace GitHubService feedback pipeline with Sentry.captureFeedback() on frontend
- Delete dead code: GitHubService (289 lines), GitHubForm.tsx (198 lines), GitHubPatDto
- Deprecate GitHub PAT admin endpoints with deprecation notices
- Add DISABLE_TELEMETRY to README configuration table
- Keep local DB feedback save as persistent record alongside Sentry forwarding

--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "@nestjs/schedule": "^6.1.1",
     "@nestjs/throttler": "^6.5.0",
     "@raid-ledger/contract": "*",
+    "@sentry/nestjs": "^10.38.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.68.0",
     "class-transformer": "^0.5.1",
