--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       CLIENT_URL: http://localhost:80
       CORS_ORIGIN: http://localhost:80
       ADMIN_PASSWORD: "${ADMIN_PASSWORD:-}"
+      # ROK-306: Sentry telemetry opt-out — uncomment to disable error tracking.
+      # DISABLE_TELEMETRY: "true"
     volumes:
       - avatar_data:/data/avatars
     ports:
