--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@date-fns/tz": "^1.4.1",
+    "@sentry/react": "^10.38.0",
     "@tanstack/react-query": "^5.90.20",
     "date-fns": "^4.1.0",
     "react": "^19.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@sentry/vite-plugin": "^4.9.1",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
