--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@date-fns/tz": "^1.4.1",
+    "@heroicons/react": "^2.2.0",
     "@sentry/react": "^10.38.0",
     "@tanstack/react-query": "^5.90.20",
     "date-fns": "^4.1.0",
