fix: security hardening — 9 fixes from adversarial code review
Critical:
- Replace JWT-in-URL with one-time auth code exchange via Redis (30s TTL)
- Add Helmet middleware for security headers (X-Frame-Options, HSTS, etc.)
- Reduce JWT expiry from 7 days to 24 hours

Medium:
- Re-fetch user role from DB in JWT strategy (prevent privilege persistence)
- Enforce 10-minute expiry on OAuth state parameters (prevent replay)
- Migrate intent token single-use tracking from in-memory Set to Redis
- Block CORS wildcard (*) in production with startup error

Low:
- Restrict localhost CORS origins to development only

--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.9.2",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
